cluster/apps/monitoring/tools/prometheus-exporter/fastcom-exporter/fastcom-exporter-ingressroute.yaml
# fastcom-exporter-metrics-local-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fastcom-exporter-metrics-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fast.${SECRET_DOMAIN_LOCAL_02}`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: fastcom-exporter-service
          port: 9877
